_docs/v0.58/embedding/sdk/api/snippets/StaticQuestionProps.md
---
version: v0.58
has_magic_breadcrumbs: true
show_category_breadcrumb: true
show_title_breadcrumb: true
category: Embedding
title: StaticQuestionProps
source_url: 'https://github.com/metabase/metabase/blob/master/docs/embedding/sdk/api/snippets/StaticQuestionProps.md'
layout: new-docs
---

**`Expand`**

## Properties

<!-- [<snippet properties>] -->

| Property                                                    | Type                                                                                                                                             | Description                                                                                                                                                                                                                                                                                                                             |
| :---------------------------------------------------------- | :----------------------------------------------------------------------------------------------------------------------------------------------- | :-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| <a id="classname"></a> `className?`                         | `string`                                                                                                                                         | A custom class name to be added to the root element.                                                                                                                                                                                                                                                                                    |
| <a id="height"></a> `height?`                               | `Height`\<`string` \| `number`\>                                                                                                                 | A number or string specifying a CSS size value that specifies the height of the component                                                                                                                                                                                                                                               |
| <a id="hiddenparameters"></a> `hiddenParameters?`           | `string`[]                                                                                                                                       | A list of parameters to hide.                                                                                                                                                                                                                                                                                                           |
| <a id="initialsqlparameters"></a> `initialSqlParameters?`   | [`SqlParameterValues`](./api/SqlParameterValues)                                                                                              | Initial values for the SQL parameters.                                                                                                                                                                                                                                                                                                  |
| <a id="questionid"></a> `questionId?`                       | `null` \| [`SdkQuestionId`](./api/SdkQuestionId)                                                                                              | The ID of the question. <br/> This is either: <br/> - the numerical ID when accessing a question link, i.e. `http://localhost:3000/question/1-my-question` where the ID is `1` <br/> - the string ID found in the `entity_id` key of the question object when using the API directly or using the SDK Collection Browser to return data |
| <a id="style"></a> `style?`                                 | [`CSSProperties`](https://github.com/DefinitelyTyped/DefinitelyTyped/blob/0b728411cd1dfb4bd26992bb35a73cf8edaa22e7/types/react/index.d.ts#L2579) | A custom style object to be added to the root element.                                                                                                                                                                                                                                                                                  |
| <a id="title"></a> `title?`                                 | [`SdkQuestionTitleProps`](./api/SdkQuestionTitleProps)                                                                                        | Determines whether the question title is displayed, and allows a custom title to be displayed instead of the default question title. Shown by default.                                                                                                                                                                                  |
| <a id="token"></a> `token?`                                 | `null` \| `string`                                                                                                                               | A valid JWT token for the guest embed.                                                                                                                                                                                                                                                                                                  |
| <a id="width"></a> `width?`                                 | `Width`\<`string` \| `number`\>                                                                                                                  | A number or string specifying a CSS size value that specifies the width of the component                                                                                                                                                                                                                                                |
| <a id="withcharttypeselector"></a> `withChartTypeSelector?` | `boolean`                                                                                                                                        | Determines whether the chart type selector and corresponding settings button are shown. Only relevant when using the default layout.                                                                                                                                                                                                    |
| <a id="withdownloads"></a> `withDownloads?`                 | `boolean`                                                                                                                                        | Enables the ability to download results in the question.                                                                                                                                                                                                                                                                                |

<!-- [<endsnippet properties>] -->
